--- a/apps/newt-ice-darkmatter/compose.yaml
+++ b/apps/newt-ice-darkmatter/compose.yaml
@@ -1,7 +1,7 @@
 services:
   newt:
     image: fosrl/newt
-    container_name: newt
+    container_name: newt-ice-darkmatter
     networks:
       - icenet
     restart: unless-stopped
