--- a/apps/newt-ice-darkmatter/newt-ice-darkmatter.toml
+++ b/apps/newt-ice-darkmatter/newt-ice-darkmatter.toml
@@ -1,6 +1,6 @@
 [[stack]]
 name = "newt-ice-darkmatter"
-tags = ["ice", "games"]
+tags = ["ice", "apps"]
 [stack.config]
 server = "darkmatter"
 linked_repo = "game_servers"
