--- a/games/armarserver/compose.yaml
+++ b/games/armarserver/compose.yaml
@@ -4,18 +4,17 @@ services:
     container_name: armarserver
     restart: unless-stopped
     networks:
-      llamamac:
-        ipv4_address: 192.168.50.74
+      - icenet
     volumes:
       - data:/data
     labels:
       - homepage.group=Games
       - homepage.name=Arma Reforger
       - homepage.icon=https://raw.githubusercontent.com/GameServerManagers/LinuxGSM/refs/heads/master/lgsm/data/gameicons/armar-icon.png
-      - homepage.href=steam://connect/192.168.50.74:2001
+      - homepage.href=steam://connect/armar.icicleskill.win:2001
       - homepage.widget.type=gamedig
       - homepage.widget.serverType=armareforger
-      - homepage.widget.url=udp://192.168.50.74:17777
+      - homepage.widget.url=udp://armarserver:17777
       - homepage.widget.fields=["status", "map", "currentPlayers", "ping"]
       - homepage.container=armarserver
       - homepage.showStats=false
@@ -23,12 +22,6 @@ volumes:
   data:
     name: armarserver_data
 networks:
-  llamamac:
-    name: llamamac
-    driver: macvlan
-    driver_opts:
-      parent: enp6s18
-    ipam:
-      config:
-        - subnet: "192.168.50.0/23"
-          gateway: "192.168.50.1"
+  icenet:
+    driver: bridge
+    name: icenet
