--- a/games/plutonium/compose.yaml
+++ b/games/plutonium/compose.yaml
@@ -3,6 +3,8 @@ services:
     image: ghcr.io/ayymoss/plutainer:latest
     container_name: iw4xmp-1
     restart: unless-stopped
+    networks:
+      - icenet
     ports:
       - "28970:28970/udp"
       #- "28970:28970/tcp" # TCP is needed for modlist metadata (not required if not hosting mods)
@@ -14,14 +16,14 @@ services:
       - IW4X_CONFIG_FILE=server.cfg
       - IW4X_GAME=iw4x
       - IW4X_AUTO_UPDATE=false
-    networks:
-      - games-net
 
   t6zm-1:
     image: ghcr.io/ayymoss/plutainer:latest
     container_name: t6zm-1
     hostname: t6zm-1
     restart: unless-stopped
+    networks:
+      - icenet
     ports:
       - "4976:4976/udp"
     volumes:
@@ -32,14 +34,14 @@ services:
       - PLUTO_SERVER_KEY=${T6ZM_PLUTO_SERVER_KEY}
       - PLUTO_CONFIG_FILE=dedicated_zm.cfg
       - PLUTO_GAME=t6zm
-    networks:
-      - games-net
 
   t6mp-1:
     image: ghcr.io/ayymoss/plutainer:latest
     container_name: t6mp-1
     hostname: t6mp-1
     restart: unless-stopped
+    networks:
+      - icenet
     ports:
       - "4977:4977/udp"
     volumes:
@@ -50,14 +52,14 @@ services:
       - PLUTO_SERVER_KEY=${T6MP_PLUTO_SERVER_KEY}
       - PLUTO_CONFIG_FILE=dedicated.cfg
       - PLUTO_GAME=t6mp
-    networks:
-      - games-net
   
   t4sp-1:
     image: ghcr.io/ayymoss/plutainer:latest
     container_name: t4sp-1
     hostname: t4sp-1
     restart: unless-stopped
+    networks:
+      - icenet
     ports:
       - "28960:28960/udp"
     volumes:
@@ -68,14 +70,14 @@ services:
       - PLUTO_SERVER_KEY=${T4SP_PLUTO_SERVER_KEY}
       - PLUTO_CONFIG_FILE=server_zm.cfg
       - PLUTO_GAME=t4sp
-    networks:
-      - games-net
   
   t4mp-1:
     image: ghcr.io/ayymoss/plutainer:latest
     container_name: t4mp-1
     hostname: t4mp-1
     restart: unless-stopped
+    networks:
+      - icenet
     ports:
       - "28961:28961/udp"
     volumes:
@@ -86,14 +88,14 @@ services:
       - PLUTO_SERVER_KEY=${T4MP_PLUTO_SERVER_KEY}
       - PLUTO_CONFIG_FILE=server.cfg
       - PLUTO_GAME=t4mp
-    networks:
-      - games-net
   
   t5mp-1:
     image: ghcr.io/ayymoss/plutainer:latest
     container_name: t5mp-1
     hostname: t5mp-1
     restart: unless-stopped
+    networks:
+      - icenet
     ports:
       - "28962:28962/udp"
     volumes:
@@ -105,14 +107,14 @@ services:
       - PLUTO_CONFIG_FILE=dedicated.cfg
       - PLUTO_GAME=t5mp
       - PLUTO_MAX_CLIENTS=18
-    networks:
-      - games-net
   
   t5sp-1:
     image: ghcr.io/ayymoss/plutainer:latest
     container_name: t5sp-1
     hostname: t5sp-1
     restart: unless-stopped
+    networks:
+      - icenet
     ports:
       - "28963:28963/udp"
     volumes:
@@ -125,31 +127,13 @@ services:
       - PLUTO_GAME=t5sp
       - PLUTO_MOD=mods/Stairway_to_hell_bo1
       - PLUTO_MAX_CLIENTS=4
-    networks:
-      - games-net
-  
-  iw5mp-1:
-    image: ghcr.io/ayymoss/plutainer:latest
-    container_name: iw5mp-1
-    hostname: iw5mp-1
-    restart: unless-stopped
-    ports:
-      - "27016:27016/udp"
-    volumes:
-      - /opt/GameFiles/IW5ServerFiles:/home/plutainer/gamefiles:ro
-      - ./iw5mp-1:/home/plutainer/app
-    environment:
-      - PLUTO_PORT=27016
-      - PLUTO_SERVER_KEY=${IW5MP_PLUTO_SERVER_KEY}
-      - PLUTO_CONFIG_FILE=server.cfg
-      - PLUTO_GAME=iw5mp
-    networks:
-      - games-net
   
   iw4madmin:
     image: ghcr.io/raidmax/iw4madmin:latest
     container_name: iw4madmin
     restart: unless-stopped
+    networks:
+      - icenet
     ports:
       - "1624:1624"
       #- You need to expose any IW4X_NET_LOG_IP ports.
@@ -164,7 +148,6 @@ services:
       - ./IW4MAdmin/Database:/app/Database
       - ./IW4MAdmin/Log:/app/Log
       - ./iw4xmp-1/gamefiles/userraw/logs/games_mp.log:/app/gamelogs/iw4xmp-1/gamefiles/userraw/logs/games_mp.log:ro
-      - ./iw5mp-1/plutonium/storage/iw5/logs/games_mp.log:/app/gamelogs/iw5mp-1/plutonium/storage/iw5/logs/games_mp.log:ro
       - ./t4mp-1/plutonium/storage/t4/main/games_mp.log:/app/gamelogs/t4mp-1/plutonium/storage/t4/main/games_mp.log:ro
       - ./t4sp-1/plutonium/storage/t4/main/games_zm.log:/app/gamelogs/t4sp-1/plutonium/storage/t4/main/games_zm.log:ro
       - ./t5mp-1/plutonium/storage/t5/main/logs/games_mp.log:/app/gamelogs/t5mp-1/plutonium/storage/t5/main/logs/games_mp.log:ro
@@ -186,23 +169,8 @@ services:
         condition: service_healthy
       t5sp-1:
         condition: service_healthy
-      iw5mp-1:
-        condition: service_healthy
-    networks:
-      iw4m-net:
-        ipv4_address: 100.64.10.2
 
 networks:
-  iw4m-net:
+  icenet:
     driver: bridge
-    ipam:
-      config:
-        - subnet: 100.64.10.0/30
-          gateway: 100.64.10.1
-  
-  games-net:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 172.26.10.0/24
-          gateway: 172.26.10.1
+    name: icenet
