--- a/games/armarserver/armar.toml
+++ b/games/armarserver/armar.toml
@@ -1,8 +1,8 @@
 [[stack]]
 name = "arma_reforger"
-tags = ["gs2", "games"]
+tags = ["ice", "games"]
 [stack.config]
-server = "gameserver2"
+server = "darkmatter"
 linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/armarserver"
