--- a/games/vhserver/common.cfg
+++ b/games/vhserver/common.cfg
@@ -39,7 +39,7 @@ instanceid="1"
 #   To go back to default you need to launch the server with the following parameter at least once:
 #.  worldmodifiers="-preset normal"
 
-worldmodifiers="normal"
+worldmodifiers="-preset normal"
 
 ## Server Parameters | https://docs.linuxgsm.com/configuration/start-parameters#additional-parameters
 startparameters="-name '${servername}' -password ${serverpassword} -port ${port} -world ${worldname} -public ${public} -savedir '${savedir}' -saveinterval ${saveinterval} -backups ${backups} -backupshort ${backupshort} -backuplong ${backuplong} -crossplay -instanceid ${instanceid} ${logFile:+ -logFile '${logFile}'} ${worldmodifiers:+ ${worldmodifiers}}"
