--- a/games/vhserver/vh.toml
+++ b/games/vhserver/vh.toml
@@ -6,3 +6,15 @@ server = "darkmatter"
 linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/vhserver"
+environment = """
+VH_IP=10.42.0.90
+VH_PORT=2456
+VH_QUERY=2456
+IF_NAME=br0
+IF_SUBNET=10.42.0.0/24
+IF_GATEWAY=10.42.0.1
+"""
+post_deploy.command = """
+docker cp common.cfg vhserver:/data/config-lgsm/vhserver/
+docker exec vhserver chown 1000:1000 /data/config-lgsm/vhserver/common.cfg
+"""
