--- a/games/vhserver/vh.toml
+++ b/games/vhserver/vh.toml
@@ -10,6 +10,7 @@ environment = """
 VH_IP=10.42.0.90
 VH_PORT=2456
 VH_QUERY=2456
+#DONT TOUCH ANYTHING BELOW
 IF_NAME=br0
 IF_SUBNET=10.42.0.0/24
 IF_GATEWAY=10.42.0.1
