--- a/games/vhserver/vh.toml
+++ b/games/vhserver/vh.toml
@@ -11,9 +11,9 @@ docker cp common.cfg vhserver:/data/config-lgsm/vhserver/
 docker exec vhserver chown 1000:1000 /data/config-lgsm/vhserver/common.cfg
 """
 environment = """
-VH_IP=10.42.0.90
-VH_PORT=2456
-VH_QUERY=2456
+GAME_IP=10.42.0.90
+GAME_PORT=2456
+GAME_QUERY=2456
 #DONT TOUCH ANYTHING BELOW
 IF_NAME=br0
 IF_SUBNET=10.42.0.0/24
