--- a/games/vhserver/compose.yaml
+++ b/games/vhserver/compose.yaml
@@ -1,27 +1,28 @@
 services:
   lgsm:
-    image: gameservermanagers/gameserver:vh
+    image: gameservermanagers/gameserver:${LGSM_SHORT}
+    container_name: ${CT_NAME}
+    hostname: ${CT_NAME}
     restart: unless-stopped
     networks:
       icemac:
         ipv4_address: ${GAME_IP}
     volumes:
       - data:/data
-    container_name: vhserver
     labels:
       - homepage.group=Games
-      - homepage.name=Valhiem
-      - homepage.icon=https://raw.githubusercontent.com/GameServerManagers/LinuxGSM/refs/heads/master/lgsm/data/gameicons/vh-icon.png
+      - homepage.name=${CT_NAME}
+      - homepage.icon=https://raw.githubusercontent.com/GameServerManagers/LinuxGSM/refs/heads/master/lgsm/data/gameicons/${LGSM_SHORT}-icon.png
       - homepage.href=steam://connect/${GAME_IP}:${GAME_PORT}
       - homepage.widget.type=gamedig
-      - homepage.widget.serverType=valhiem
+      - homepage.widget.serverType=${GD_TYPE_ID}
       - homepage.widget.url=udp://${GAME_IP}:${GAME_QUERY}
       - homepage.widget.fields=["status", "map", "currentPlayers", "ping"]
-      - homepage.container=vhserver
+      - homepage.container=${CT_NAME}
       - homepage.showStats=false
 volumes:
   data:
-    name: vhserver_data
+    name: ${CT_NAME}_data
 networks:
   icemac:
     name: icemac
