--- a/games/vhserver/common.cfg
+++ b/games/vhserver/common.cfg
@@ -1,7 +1,7 @@
 #### Game Server Settings ####
 
 ## Predefined Parameters | https://docs.linuxgsm.com/configuration/start-parameters
-servername="VALKILMUR-DUR"
+servername="ICESERVERS-VALHEIM"
 serverpassword="" # Minimum password length is 5.
 port="2456"
 worldname="${selfname}"
