--- a/games/vhserver/vh.toml
+++ b/games/vhserver/vh.toml
@@ -6,7 +6,9 @@ server = "darkmatter"
 linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/vhserver"
-config_files = [{ path = "common.cfg" }]
+config_files = [
+  { path = "common.cfg", requires = "Redeploy" }
+]
 post_deploy.command = """
 docker cp common.cfg vhserver:/data/config-lgsm/vhserver/
 docker exec vhserver chown 1000:1000 /data/config-lgsm/vhserver/common.cfg
