--- a/games/arma3server/compose.yaml
+++ b/games/arma3server/compose.yaml
@@ -1,27 +1,35 @@
 services:
   lgsm:
-    image: gameservermanagers/gameserver:arma3
-    container_name: arma3server
+    image: gameservermanagers/gameserver:${LGSM_SHORT}
+    container_name: ${CT_NAME}
+    hostname: ${CT_NAME}
     restart: unless-stopped
     networks:
-      - icenet
+      icemac:
+        ipv4_address: ${GAME_IP}
     volumes:
       - data:/data
     labels:
       - homepage.group=Games
-      - homepage.name=Arma 3
-      - homepage.icon=https://raw.githubusercontent.com/GameServerManagers/LinuxGSM/refs/heads/master/lgsm/data/gameicons/arma3-icon.png
-      - homepage.href=steam://connect/arma3.icicleskill.win:2302
+      - homepage.name=${CT_NAME}
+      - homepage.icon=https://raw.githubusercontent.com/GameServerManagers/LinuxGSM/refs/heads/master/lgsm/data/gameicons/${LGSM_SHORT}-icon.png
+      - homepage.href=steam://connect/${GAME_IP}:${GAME_PORT}
       - homepage.widget.type=gamedig
-      - homepage.widget.serverType=arma3
-      - homepage.widget.url=udp://arma3server:2302
+      - homepage.widget.serverType=${GD_TYPE_ID}
+      - homepage.widget.url=udp://${GAME_IP}:${GAME_QUERY}
       - homepage.widget.fields=["status", "map", "currentPlayers", "ping"]
-      - homepage.container=arma3server
+      - homepage.container=${CT_NAME}
       - homepage.showStats=false
 volumes:
   data:
-    name: arma3server_data
+    name: ${CT_NAME}_data
 networks:
-  icenet:
-    driver: bridge
-    name: icenet
+  icemac:
+    name: icemac
+    driver: macvlan
+    driver_opts:
+      parent: ${IF_NAME}
+    ipam:
+      config:
+        - subnet: "${IF_SUBNET}"
+          gateway: "${IF_GATEWAY}"
