--- a/games/qlserver/ql.toml
+++ b/games/qlserver/ql.toml
@@ -18,3 +18,23 @@ docker exec qlserver chown 1000:1000 /data/serverfiles/baseq3/workshop.txt
 docker cp common.cfg qlserver:/data/config-lgsm/qlserver/
 docker exec qlserver chown 1000:1000 /data/config-lgsm/qlserver/common.cfg
 """
+environment = """
+####lgsm short name
+LGSM_SHORT=vh
+####container name
+CT_NAME=vhserver
+####gamedig game type
+GD_TYPE_ID=valheim
+####server game port
+GAME_PORT=2456
+####server query port
+GAME_QUERY=2456
+####server ip
+GAME_IP=10.42.0.90
+####macvlan host subnet
+IF_SUBNET=10.42.0.0/24
+####macvlan host gateway
+IF_GATEWAY=10.42.0.1
+####macvlan host interface
+IF_NAME=br0
+"""
