--- a/games/arma3server/arma3.toml
+++ b/games/arma3server/arma3.toml
@@ -14,3 +14,23 @@ docker exec arma3server chown 1000:1000 /data/serverfiles/cfg/network.cfg
 docker cp common.cfg arma3server:/data/config-lgsm/arma3server/
 docker exec arma3server chown 1000:1000 /data/config-lgsm/arma3server/common.cfg
 """
+environment = """
+####lgsm short name
+LGSM_SHORT=vh
+####container name
+CT_NAME=vhserver
+####gamedig game type
+GD_TYPE_ID=valheim
+####server game port
+GAME_PORT=2456
+####server query port
+GAME_QUERY=2456
+####server ip
+GAME_IP=10.42.0.90
+####macvlan host subnet
+IF_SUBNET=10.42.0.0/24
+####macvlan host gateway
+IF_GATEWAY=10.42.0.1
+####macvlan host interface
+IF_NAME=br0
+"""
