--- a/games/cs2server/cs2.toml
+++ b/games/cs2server/cs2.toml
@@ -12,3 +12,23 @@ docker exec cs2server chown 1000:1000 /data/serverfiles/game/csgo/cfg/cs2server.
 docker cp common.cfg cs2server:/data/config-lgsm/cs2server/
 docker exec cs2server chown 1000:1000 /data/config-lgsm/cs2server/common.cfg
 """
+environment = """
+####lgsm short name
+LGSM_SHORT=vh
+####container name
+CT_NAME=vhserver
+####gamedig game type
+GD_TYPE_ID=valheim
+####server game port
+GAME_PORT=2456
+####server query port
+GAME_QUERY=2456
+####server ip
+GAME_IP=10.42.0.90
+####macvlan host subnet
+IF_SUBNET=10.42.0.0/24
+####macvlan host gateway
+IF_GATEWAY=10.42.0.1
+####macvlan host interface
+IF_NAME=br0
+"""
