--- a/games/csserver/cs.toml
+++ b/games/csserver/cs.toml
@@ -1,11 +1,15 @@
 [[stack]]
 name = "counter_strike_16"
-tags = ["gs1", "games"]
+tags = ["ice", "games"]
 [stack.config]
-server = "gameserver1"
+server = "darkmatter"
 linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/csserver"
+config_files = [
+  { path = "common.cfg", requires = "None" }
+  { path = "csserver.cfg", requires = "None" }
+]
 post_deploy.command = """
 docker cp csserver.cfg csserver:/data/serverfiles/cstrike/
 docker exec csserver chown 1000:1000 /data/serverfiles/cstrike/csserver.cfg
@@ -14,17 +18,17 @@ docker exec csserver chown 1000:1000 /data/config-lgsm/csserver/common.cfg
 """
 environment = """
 ####lgsm short name
-LGSM_SHORT=vh
+LGSM_SHORT=cs
 ####container name
-CT_NAME=vhserver
+CT_NAME=csserver
 ####gamedig game type
-GD_TYPE_ID=valheim
+GD_TYPE_ID=counterstrike16
 ####server game port
-GAME_PORT=2456
+GAME_PORT=27015
 ####server query port
-GAME_QUERY=2456
+GAME_QUERY=27015
 ####server ip
-GAME_IP=10.42.0.90
+GAME_IP=10.42.0.XX
 ####macvlan host subnet
 IF_SUBNET=10.42.0.0/24
 ####macvlan host gateway
