--- a/games/dodsserver/dods.toml
+++ b/games/dodsserver/dods.toml
@@ -1,11 +1,15 @@
 [[stack]]
 name = "day_of_defeat_source"
-tags = ["gs1", "games"]
+tags = ["ice", "games"]
 [stack.config]
-server = "gameserver1"
+server = "darkmatter"
 linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/dodsserver"
+config_files = [
+  { path = "common.cfg", requires = "None" }
+  { path = "dodsserver.cfg", requires = "None" }
+]
 post_deploy.command = """
 docker cp dodsserver.cfg dodsserver:/data/serverfiles/dod/cfg/
 docker exec dodsserver chown 1000:1000 /data/serverfiles/dod/cfg/dodsserver.cfg
@@ -14,17 +18,17 @@ docker exec dodsserver chown 1000:1000 /data/config-lgsm/dodsserver/common.cfg
 """
 environment = """
 ####lgsm short name
-LGSM_SHORT=vh
+LGSM_SHORT=dods
 ####container name
-CT_NAME=vhserver
+CT_NAME=dodsserver
 ####gamedig game type
-GD_TYPE_ID=valheim
+GD_TYPE_ID=dods
 ####server game port
-GAME_PORT=2456
+GAME_PORT=27015
 ####server query port
-GAME_QUERY=2456
+GAME_QUERY=27015
 ####server ip
-GAME_IP=10.42.0.90
+GAME_IP=10.42.0.XX
 ####macvlan host subnet
 IF_SUBNET=10.42.0.0/24
 ####macvlan host gateway
