--- a/games/etlserver/etl.toml
+++ b/games/etlserver/etl.toml
@@ -1,11 +1,15 @@
 [[stack]]
 name = "enemy_territory_legacy"
-tags = ["gs1", "games"]
+tags = ["ice", "games"]
 [stack.config]
-server = "gameserver1"
+server = "darkmatter"
 linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/etlserver"
+config_files = [
+  { path = "common.cfg", requires = "None" }
+  { path = "etlserver.cfg", requires = "None" }
+]
 post_deploy.command = """
 docker cp etlserver.cfg etlserver:/data/serverfiles/etmain/
 docker exec etlserver chown 1000:1000 /data/serverfiles/etmain/etlserver.cfg
@@ -14,17 +18,17 @@ docker exec etlserver chown 1000:1000 /data/config-lgsm/etlserver/common.cfg
 """
 environment = """
 ####lgsm short name
-LGSM_SHORT=vh
+LGSM_SHORT=etl
 ####container name
-CT_NAME=vhserver
+CT_NAME=etlserver
 ####gamedig game type
-GD_TYPE_ID=valheim
+GD_TYPE_ID=rtcw
 ####server game port
-GAME_PORT=2456
+GAME_PORT=27960
 ####server query port
-GAME_QUERY=2456
+GAME_QUERY=27960
 ####server ip
-GAME_IP=10.42.0.90
+GAME_IP=10.42.0.XX
 ####macvlan host subnet
 IF_SUBNET=10.42.0.0/24
 ####macvlan host gateway
