--- a/games/gmodserver/gmod.toml
+++ b/games/gmodserver/gmod.toml
@@ -1,11 +1,15 @@
 [[stack]]
 name = "garrys_mod"
-tags = ["gs1", "games"]
+tags = ["ice", "games"]
 [stack.config]
-server = "gameserver1"
+server = "darkmatter"
 linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/gmodserver"
+config_files = [
+  { path = "common.cfg", requires = "None" }
+  { path = "gmodserver.cfg", requires = "None" }
+]
 post_deploy.command = """
 docker cp gmodserver.cfg gmodserver:/data/serverfiles/garrysmod/cfg/
 docker exec gmodserver chown 1000:1000 /data/serverfiles/garrysmod/cfg/gmodserver.cfg
@@ -14,17 +18,17 @@ docker exec gmodserver chown 1000:1000 /data/config-lgsm/gmodserver/common.cfg
 """
 environment = """
 ####lgsm short name
-LGSM_SHORT=vh
+LGSM_SHORT=gmod
 ####container name
-CT_NAME=vhserver
+CT_NAME=gmodserver
 ####gamedig game type
-GD_TYPE_ID=valheim
+GD_TYPE_ID=garrysmod
 ####server game port
-GAME_PORT=2456
+GAME_PORT=27015
 ####server query port
-GAME_QUERY=2456
+GAME_QUERY=27015
 ####server ip
-GAME_IP=10.42.0.90
+GAME_IP=10.42.0.XX
 ####macvlan host subnet
 IF_SUBNET=10.42.0.0/24
 ####macvlan host gateway
