--- a/games/hl2dmserver/hl2dm.toml
+++ b/games/hl2dmserver/hl2dm.toml
@@ -1,11 +1,15 @@
 [[stack]]
 name = "half_life_2_deathmatch"
-tags = ["gs1", "games"]
+tags = ["ice", "games"]
 [stack.config]
-server = "gameserver1"
+server = "darkmatter"
 linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/hl2dmserver"
+config_files = [
+  { path = "common.cfg", requires = "None" }
+  { path = "hl2dmserver.cfg", requires = "None" }
+]
 post_deploy.command = """
 docker cp hl2dmserver.cfg hl2dmserver:/data/serverfiles/hl2mp/cfg/
 docker exec hl2dmserver chown 1000:1000 /data/serverfiles/hl2mp/cfg/hl2dmserver.cfg
@@ -14,17 +18,17 @@ docker exec hl2dmserver chown 1000:1000 /data/config-lgsm/hl2dmserver/common.cfg
 """
 environment = """
 ####lgsm short name
-LGSM_SHORT=vh
+LGSM_SHORT=hl2dm
 ####container name
-CT_NAME=vhserver
+CT_NAME=hl2dmserver
 ####gamedig game type
-GD_TYPE_ID=valheim
+GD_TYPE_ID=hl2d
 ####server game port
-GAME_PORT=2456
+GAME_PORT=27015
 ####server query port
-GAME_QUERY=2456
+GAME_QUERY=27015
 ####server ip
-GAME_IP=10.42.0.90
+GAME_IP=10.42.0.XX
 ####macvlan host subnet
 IF_SUBNET=10.42.0.0/24
 ####macvlan host gateway
