--- a/games/mhserver/mh.toml
+++ b/games/mhserver/mh.toml
@@ -1,11 +1,15 @@
 [[stack]]
 name = "mordhau"
-tags = ["gs2", "games"]
+tags = ["ice", "games"]
 [stack.config]
-server = "gameserver2"
+server = "darkmatter"
 linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/mhserver"
+config_files = [
+  { path = "common.cfg", requires = "None" }
+  { path = "mhserver.cfg", requires = "None" }
+]
 post_deploy.command = """
 docker cp Game.ini mhserver:/data/serverfiles/Mordhau/Saved/Config/Linuxserver/
 docker exec mhserver chown 1000:1000 /data/serverfiles/Mordhau/Saved/Config/Linuxserver/Game.ini
@@ -14,17 +18,17 @@ docker exec mhserver chown 1000:1000 /data/config-lgsm/mhserver/common.cfg
 """
 environment = """
 ####lgsm short name
-LGSM_SHORT=vh
+LGSM_SHORT=mh
 ####container name
-CT_NAME=vhserver
+CT_NAME=mhserver
 ####gamedig game type
-GD_TYPE_ID=valheim
+GD_TYPE_ID=mordhau
 ####server game port
-GAME_PORT=2456
+GAME_PORT=7777
 ####server query port
-GAME_QUERY=2456
+GAME_QUERY=27015
 ####server ip
-GAME_IP=10.42.0.90
+GAME_IP=10.42.0.XX
 ####macvlan host subnet
 IF_SUBNET=10.42.0.0/24
 ####macvlan host gateway
