--- a/games/rtcwserver/rtcw.toml
+++ b/games/rtcwserver/rtcw.toml
@@ -1,11 +1,15 @@
 [[stack]]
 name = "return_to_castle_wolfenstein"
-tags = ["gs2", "games"]
+tags = ["ice", "games"]
 [stack.config]
-server = "gameserver2"
+server = "darkmatter"
 linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/rtcwserver"
+config_files = [
+  { path = "common.cfg", requires = "None" }
+  { path = "rtcwserver.cfg", requires = "None" }
+]
 post_deploy.command = """
 docker cp rtcwserver.cfg rtcwserver:/data/serverfiles/main/
 docker exec rtcwserver chown 1000:1000 /data/serverfiles/main/rtcwserver.cfg
@@ -14,17 +18,17 @@ docker exec rtcwserver chown 1000:1000 /data/config-lgsm/rtcwserver/common.cfg
 """
 environment = """
 ####lgsm short name
-LGSM_SHORT=vh
+LGSM_SHORT=rtcw
 ####container name
-CT_NAME=vhserver
+CT_NAME=rtcwserver
 ####gamedig game type
-GD_TYPE_ID=valheim
+GD_TYPE_ID=rtcw
 ####server game port
-GAME_PORT=2456
+GAME_PORT=27960
 ####server query port
-GAME_QUERY=2456
+GAME_QUERY=27960
 ####server ip
-GAME_IP=10.42.0.90
+GAME_IP=10.42.0.XX
 ####macvlan host subnet
 IF_SUBNET=10.42.0.0/24
 ####macvlan host gateway
