--- a/games/rustserver/rust.toml
+++ b/games/rustserver/rust.toml
@@ -1,11 +1,15 @@
 [[stack]]
 name = "rust"
-tags = ["gs2", "games"]
+tags = ["ice", "games"]
 [stack.config]
-server = "gameserver2"
+server = "darkmatter"
 linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/rustserver"
+config_files = [
+  { path = "common.cfg", requires = "None" }
+  { path = "rustserver.cfg", requires = "None" }
+]
 post_deploy.command = """
 docker cp rustserver.cfg rustserver:/data/serverfiles/server/rust/cfg/
 docker exec rustserver chown 1000:1000 /data/serverfiles/server/rust/cfg/rustserver.cfg
@@ -14,17 +18,17 @@ docker exec rustserver chown 1000:1000 /data/config-lgsm/rustserver/common.cfg
 """
 environment = """
 ####lgsm short name
-LGSM_SHORT=vh
+LGSM_SHORT=rust
 ####container name
-CT_NAME=vhserver
+CT_NAME=rustserver
 ####gamedig game type
-GD_TYPE_ID=valheim
+GD_TYPE_ID=rust
 ####server game port
-GAME_PORT=2456
+GAME_PORT=28015
 ####server query port
-GAME_QUERY=2456
+GAME_QUERY=28017
 ####server ip
-GAME_IP=10.42.0.90
+GAME_IP=10.42.0.XX
 ####macvlan host subnet
 IF_SUBNET=10.42.0.0/24
 ####macvlan host gateway
