--- a/games/sfserver/sf.toml
+++ b/games/sfserver/sf.toml
@@ -1,28 +1,31 @@
 [[stack]]
 name = "satisfactory"
-tags = ["gs2", "games"]
+tags = ["ice", "games"]
 [stack.config]
-server = "gameserver2"
+server = "darkmatter"
 linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/sfserver"
+config_files = [
+  { path = "common.cfg", requires = "None" }
+]
 post_deploy.command = """
 docker cp common.cfg sfserver:/data/config-lgsm/sfserver/
 docker exec sfserver chown 1000:1000 /data/config-lgsm/sfserver/common.cfg
 """
 environment = """
 ####lgsm short name
-LGSM_SHORT=vh
+LGSM_SHORT=sf
 ####container name
-CT_NAME=vhserver
+CT_NAME=sfserver
 ####gamedig game type
-GD_TYPE_ID=valheim
+GD_TYPE_ID=satisfactory
 ####server game port
-GAME_PORT=2456
+GAME_PORT=7777
 ####server query port
-GAME_QUERY=2456
+GAME_QUERY=157777
 ####server ip
-GAME_IP=10.42.0.90
+GAME_IP=10.42.0.XX
 ####macvlan host subnet
 IF_SUBNET=10.42.0.0/24
 ####macvlan host gateway
