--- a/games/l4d2server/common.cfg
+++ b/games/l4d2server/common.cfg
@@ -22,7 +22,7 @@ stats="off"
 # (on|off)
 
 # Display IP | https://docs.linuxgsm.com/alerts#display-ip
-displayip="192.168.50.64"
+displayip=""
 
 # More info | https://docs.linuxgsm.com/alerts#more-info
 postalert="off"
