--- a/games/arma3server/arma3.toml
+++ b/games/arma3server/arma3.toml
@@ -7,8 +7,8 @@ linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/arma3server"
 config_files = [
-  { path = "common.cfg", requires = "None" }
-  { path = "network.cfg", requires = "None" }
+  { path = "common.cfg", requires = "None" },
+  { path = "network.cfg", requires = "None" },
   { path = "server.cfg", requires = "None" }
 ]
 post_deploy.command = """
