--- a/games/armarserver/armar.toml
+++ b/games/armarserver/armar.toml
@@ -7,7 +7,7 @@ linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/armarserver"
 config_files = [
-  { path = "common.cfg", requires = "None" }
+  { path = "common.cfg", requires = "None" },
   { path = "armarserver_config.json", requires = "None" }
 ]
 post_deploy.command = """
