--- a/games/csserver/cs.toml
+++ b/games/csserver/cs.toml
@@ -7,7 +7,7 @@ linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/csserver"
 config_files = [
-  { path = "common.cfg", requires = "None" }
+  { path = "common.cfg", requires = "None" },
   { path = "csserver.cfg", requires = "None" }
 ]
 post_deploy.command = """
