--- a/games/dodsserver/dods.toml
+++ b/games/dodsserver/dods.toml
@@ -7,7 +7,7 @@ linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/dodsserver"
 config_files = [
-  { path = "common.cfg", requires = "None" }
+  { path = "common.cfg", requires = "None" },
   { path = "dodsserver.cfg", requires = "None" }
 ]
 post_deploy.command = """
