--- a/games/gmodserver/gmod.toml
+++ b/games/gmodserver/gmod.toml
@@ -7,7 +7,7 @@ linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/gmodserver"
 config_files = [
-  { path = "common.cfg", requires = "None" }
+  { path = "common.cfg", requires = "None" },
   { path = "gmodserver.cfg", requires = "None" }
 ]
 post_deploy.command = """
