--- a/games/l4d2server/l4d2.toml
+++ b/games/l4d2server/l4d2.toml
@@ -7,7 +7,7 @@ linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/l4d2server"
 config_files = [
-  { path = "common.cfg", requires = "None" }
+  { path = "common.cfg", requires = "None" },
   { path = "l4d2server.cfg", requires = "None" }
 ]
 post_deploy.command = """
