--- a/games/mhserver/mh.toml
+++ b/games/mhserver/mh.toml
@@ -7,7 +7,7 @@ linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/mhserver"
 config_files = [
-  { path = "common.cfg", requires = "None" }
+  { path = "common.cfg", requires = "None" },
   { path = "mhserver.cfg", requires = "None" }
 ]
 post_deploy.command = """
