--- a/games/rtcwserver/rtcw.toml
+++ b/games/rtcwserver/rtcw.toml
@@ -7,7 +7,7 @@ linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/rtcwserver"
 config_files = [
-  { path = "common.cfg", requires = "None" }
+  { path = "common.cfg", requires = "None" },
   { path = "rtcwserver.cfg", requires = "None" }
 ]
 post_deploy.command = """
