--- a/games/rustserver/rust.toml
+++ b/games/rustserver/rust.toml
@@ -7,7 +7,7 @@ linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/rustserver"
 config_files = [
-  { path = "common.cfg", requires = "None" }
+  { path = "common.cfg", requires = "None" },
   { path = "rustserver.cfg", requires = "None" }
 ]
 post_deploy.command = """
