--- a/games/stserver/st.toml
+++ b/games/stserver/st.toml
@@ -7,7 +7,7 @@ linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/utserver"
 config_files = [
-  { path = "common.cfg", requires = "None" }
+  { path = "common.cfg", requires = "None" },
   { path = "Game.ini", requires = "None" }
 ]
 post_deploy.command = """
