--- a/games/tf2server/tf2.toml
+++ b/games/tf2server/tf2.toml
@@ -7,7 +7,7 @@ linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/tf2server"
 config_files = [
-  { path = "common.cfg", requires = "None" }
+  { path = "common.cfg", requires = "None" },
   { path = "tf2server.cfg", requires = "None" }
 ]
 post_deploy.command = """
