--- a/games/tuserver/tu.toml
+++ b/games/tuserver/tu.toml
@@ -7,7 +7,7 @@ linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/tuserver"
 config_files = [
-  { path = "common.cfg", requires = "None" }
+  { path = "common.cfg", requires = "None" },
   { path = "tuserver.ini", requires = "None" }
 ]
 post_deploy.command = """
