--- a/games/ut99server/ut99.toml
+++ b/games/ut99server/ut99.toml
@@ -7,7 +7,7 @@ linked_repo = "docker"
 webhook_enabled = false
 run_directory = "games/ut99server"
 config_files = [
-  { path = "common.cfg", requires = "None" }
+  { path = "common.cfg", requires = "None" },
   { path = "ut99server.ini", requires = "None" }
 ]
 post_deploy.command = """
